Actually fix cutoff outlines in overflows

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -82,7 +82,8 @@ select {
 }
 
 *:focus-visible {
-  outline: 2px double var(--clr-warn-5);
+  outline: 2px solid var(--clr-warn-5);
+  outline-offset: -2px;
   z-index: 0;
 }
 
